# SW-Fromal-Verification

AstraVer/: hint.txt  re.md
AstraVer/cocktail_back/: cocktail_back.c
AstraVer/cocktail_back_rewritten/: cocktail_fwd.c
AstraVer/cocktail_sort_verif/: cocktail_fwd.c  new_try.c
AstraVer/examples/: ariphm.c  bins.c  euclid.c  idiv.c  sum.c
DPLL/: CMakeLists.txt  README.md
DPLL/inc/: dpll_solver.h
DPLL/src/: dpll.cpp  dpll_solver.cpp
DPLL/test/: dpll_test.cpp
DPLL/third_parties/dpll_dimacs/: dimacs.c  dimacs.h
SPIN/abp_proto/: abp_proto.pml
SPIN/canibals_problem/: canibals_problem.pml
SPIN/euclid/: euclid.pml
SPIN/father_and_sons_problem/: father_and_sons_problem.pml  task.md
SPIN/hanoi/: hanoi.pml
SPIN/hello/: hello.pml
SPIN/peterson/: peterson.pml
SPIN/srv_cls/: srv_cls.pml
SPIN/wgc_problem/: wgc_problem.pml
